--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         <br>
                         <dd>
                             <p>开启后，可以获得选定种类的90级史诗装备的史诗碎片30个</p>
-                            <img src=http://wx1.sinaimg.cn/mw690/005XcV4Sgy1fckeclhj2fj304l01l3yn.jpg
+                            <img src=//wx1.sinaimg.cn/mw690/005XcV4Sgy1fckeclhj2fj304l01l3yn.jpg
                                  width="165" height="57">
                             <ul>
                                 <li>需要50个黑白矿进行兑换</li>
