--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
                         <a href="#foreword">前言</a>
                     </li>
                     <li class="dropdown">
-                        <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">卢克Raid相关奖励<span
-                                class="caret"></span></a>
+                        <a href="javascript:void(0);"
+                           class="dropdown-toggle" data-toggle="dropdown">卢克Raid相关奖励&nbsp;
+                            <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li>
-                                <a href="#luck-card">通关卡牌</a>
+                                <a href="#luck-card">通关卡牌 - 小队</a>
                             </li>
                             <li>
-                                <a href="#exchange">道具兑换</a>
+                                <a href="#luck-card-team">通关卡牌 - 团体</a>
                             </li>
                             <li>
                                 <a href="#exchange">道具兑换</a>
@@ -55,16 +56,32 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">减伤率下限</a>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">相关测试 <span
-                                class="caret"></span></a>
+                        <a href="javascript:void(0);"
+                           class="dropdown-toggle" data-toggle="dropdown">相关测试&nbsp;
+                            <span class="caret"></span>
+                        </a>
                         <ul class="dropdown-menu" role="menu">
                             <li>
-                                <a href="#">测试条件</a>
+                                <a href="#item-0">武器 - 创圣的救援者</a>
                             </li>
-
+                            <li>
+                                <a href="#item-1">布甲防具 - 亡魂幻觉 套装</a>
+                            </li>
+                            <li>
+                                <a href="#item-2">皮甲防具 - 深渊恶魔猎手 套装</a>
+                            </li>
+                            <li>
+                                <a href="#item-3">轻甲防具 - 超大陆的崩坏 套装</a>
+                            </li>
+                            <li>
+                                <a href="#item-4">重甲防具 - 娜迦王的贪食 套装</a>
+                            </li>
+                            <li>
+                                <a href="#item-5">板甲防具 - 堕落的七宗罪 套装</a>
+                            </li>
+                            <li>
+                                <a href="#item-5">特殊装备 - 海伯伦的君主 套装</a>
+                            </li>
                         </ul>
                 </ul>
             </div>
@@ -136,8 +153,7 @@
                         </dd>
                         <br>
                     </dl>
-                    <h4>通关卡牌-团体</h4>
-                    <div style="padding-bottom: 5px;border-bottom: 2px solid #333;width: 30%;margin-bottom: 10px"></div>
+                    <h4 id="luck-card-team">通关卡牌-团体</h4>
                     <figure>
                         <img src=//wx4.sinaimg.cn/large/005XcV4Sgy1fck56k0pcdj30go0aftk9.jpg
                              class="img-responsive center-block" width="600" height="375">
@@ -309,7 +325,8 @@
                     <div class="ht-2"></div>
                     <dl>
                         <dt class="bg-ico">
-                            <span class="text-pink" style="background-image: url(//wx4.sinaimg.cn/mw690/005XcV4Sly1fck2ejsw20j300s00sq2p.jpg)">黑白矿</span>
+                            <span class="text-pink"
+                                  style="background-image: url(//wx4.sinaimg.cn/mw690/005XcV4Sly1fck2ejsw20j300s00sq2p.jpg)">黑白矿</span>
                         </dt>
                         <br>
                         <dd>
@@ -323,7 +340,8 @@
                         </dd>
                         <div class="ht-2"></div>
                         <dt class="bg-ico">
-                            <span class="text-pink" style="background-image: url(//wx2.sinaimg.cn/mw690/005XcV4Sly1fck2etpkuej300s00sdfl.jpg)">85级史诗碎片礼盒</span>
+                            <span class="text-pink"
+                                  style="background-image: url(//wx2.sinaimg.cn/mw690/005XcV4Sly1fck2etpkuej300s00sdfl.jpg)">85级史诗碎片礼盒</span>
                         </dt>
                         <br>
                         <dd>
@@ -337,7 +355,8 @@
                         </dd>
                         <div class="ht-2"></div>
                         <dt class="bg-ico">
-                            <span class="text-pink" style="background-image: url(//wx2.sinaimg.cn/mw690/005XcV4Sly1fck2etpkuej300s00sdfl.jpg)">90级史诗碎片礼盒</span>
+                            <span class="text-pink"
+                                  style="background-image: url(//wx2.sinaimg.cn/mw690/005XcV4Sly1fck2etpkuej300s00sdfl.jpg)">90级史诗碎片礼盒</span>
                         </dt>
                         <br>
                         <dd>
@@ -350,7 +369,8 @@
                         </dd>
                         <div class="ht-2"></div>
                         <dt class="bg-ico">
-                            <span class="text-pink" style="background-image: url(//wx1.sinaimg.cn/mw690/005XcV4Sgy1fck2s0csjsj300s00sq2p.jpg)">建设者卢克（暗）卡片</span>
+                            <span class="text-pink"
+                                  style="background-image: url(//wx1.sinaimg.cn/mw690/005XcV4Sgy1fck2s0csjsj300s00sq2p.jpg)">建设者卢克（暗）卡片</span>
                         </dt>
                         <br>
                         <dd>
@@ -565,29 +585,42 @@
             <div id="nav" class="navbar-example" data-spy="affix" data-offset-top="270">
                 <ul class="nav navs-white" role="tablist">
                     <li>
-                        <a href="#preface">前言</a>
+                        <a href="#foreword">前言</a>
                     </li>
                     <li>
-                        <a href="#debuff">减防算法</a>
+                        <a href="#">卢克Raid相关奖励</a>
                         <ul class="nav  navs-white">
                             <li>
-                                <a href="#fixed-percentage-item">固定类与百分比类装备</a>
+                                <a href="#luck-card">通关卡牌 - 小队</a>
+                            </li>
+                            <li>
+                                <a href="#luck-card-team">通关卡牌 - 团体</a>
+                            </li>
+                            <li>
+                                <a href="#exchange">道具兑换</a>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#minimum">减伤率下限</a>
+                        <a href="#item-0">武器 - 创圣的救援者</a>
                     </li>
                     <li>
-                        <a href="#tests">相关测试</a>
-                        <ul class="nav  navs-white">
-                            <li>
-                                <a href="#test">测试条件</a>
-                            </li>
-                            <li>
-                                <a href="#test-0">普通安徒恩副本</a>
-                            </li>
-                        </ul>
+                        <a href="#item-1">布甲防具 - 亡魂幻觉 套装</a>
+                    </li>
+                    <li>
+                        <a href="#item-2">皮甲防具 - 深渊恶魔猎手 套装</a>
+                    </li>
+                    <li>
+                        <a href="#item-3">轻甲防具 - 超大陆的崩坏 套装</a>
+                    </li>
+                    <li>
+                        <a href="#item-4">重甲防具 - 娜迦王的贪食 套装</a>
+                    </li>
+                    <li>
+                        <a href="#item-5">板甲防具 - 堕落的七宗罪 套装</a>
+                    </li>
+                    <li>
+                        <a href="#item-5">特殊装备 - 海伯伦的君主 套装</a>
                     </li>
                 </ul>
             </div>
@@ -634,7 +667,7 @@
     //移动速度 500
     function moveAnchor() {
         $('html, body').animate({
-            scrollTop: $($.attr(this, 'href')).offset().top - 50
+            scrollTop: $($.attr(this, 'href')).offset().top - 55
         }, 500);
         return false;
     }
