--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <title>海伯伦的荣耀—卢克Raid模式奖励介绍</title>
-    <meta name="keyword" content="减防算法 ，减防叠加，百分比减防">
+    <link rel="shortcut icon" href="favicon.png">
     <meta name="x5-fullscreen" content="true">
     <meta name="x5-page-mode" content="app">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -147,7 +147,7 @@
                                 可以兑换为1个<span class="text-pink">黑白矿</span>
                             </p>
                             <ul>
-                                <li><span class="text-pink">暗之根源</span>属于普通卡牌</li>
+                                <li><span class="keywords-pink">暗之根源</span>属于普通卡牌</li>
                                 <li>获取数量为4/5/6个</li>
                             </ul>
                         </dd>
@@ -576,7 +576,7 @@
                     <figcaption>
                         <h5>超大陆 - 凯诺兰的地壳</h5>
                     </figcaption>
-                    <img class="center-block img-responsive" src="img/" width="397" height="391"
+                    <img class="center-block img-responsive" src="" width="397" height="391"
                          alt="超大陆---凯诺兰的地壳">
                 </figure>
             </section>
@@ -589,7 +589,7 @@
                     </li>
                     <li>
                         <a href="#">卢克Raid相关奖励</a>
-                        <ul class="nav  navs-white">
+                        <ul class="nav navs-white">
                             <li>
                                 <a href="#luck-card">通关卡牌 - 小队</a>
                             </li>
