--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
                 <p>除了修正以往论坛资料中存在的一些细微的错误外，也同步韩服加入了女圣职者相关的属性。希望能对各位有所帮助。</p>
                 <br>
                 <p>感谢
-                    <a  href=//bbs.colg.cn/home.php?mod=space&uid=517522 title="跳转该用户页面">kfu</a> 、
-                    <a href=//bbs.colg.cn/home.php?mod=space&uid=499326 title="跳转该用户页面">duanchao1993</a> 、
-                    <a href=//bbs.colg.cn/home.php?mod=space&uid=917192 title="跳转该用户页面">天空の城市</a> 、
-                    <a href=//bbs.colg.cn/home.php?mod=space&uid=917192 title="跳转该用户页面">修炼爱情</a> 对于此帖完成提供的帮助。</p>
+                    <a  href=http://bbs.colg.cn/home.php?mod=space&uid=517522 title="跳转该用户页面">kfu</a> 、
+                    <a href=http://bbs.colg.cn/home.php?mod=space&uid=499326 title="跳转该用户页面">duanchao1993</a> 、
+                    <a href=http://bbs.colg.cn/home.php?mod=space&uid=917192 title="跳转该用户页面">天空の城市</a> 、
+                    <a href=http://bbs.colg.cn/home.php?mod=space&uid=917192 title="跳转该用户页面">修炼爱情</a> 对于此帖完成提供的帮助。</p>
                 <div class="ht-2"></div>
                 <blockquote class="blockquote-reverse">
                     <footer>
-                        <a href=//bbs.colg.cn/thread-5724856-1-1.html title="跳转原文">逝楓_Soultaker</a>
+                        <a href=http://bbs.colg.cn/thread-5724856-1-1.html title="跳转原文">逝楓_Soultaker</a>
                     </footer>
                     <br>
                     <p>2017年2月9日</p>
