--- a/index.html
+++ b/index.html
@@ -877,6 +877,16 @@
         });
     });
 </script>
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?f835fa6ef04323b580066cc84053f84c";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
+
 </body>
 
 </html>
