添加访问统计

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <p>除了修正以往论坛资料中存在的一些细微的错误外，也同步韩服加入了女圣职者相关的属性。希望能对各位有所帮助。</p>
                 <br>
                 <p>感谢
-                    <a  href=http://bbs.colg.cn/home.php?mod=space&uid=517522 title="跳转该用户页面">kfu</a> 、
+                    <a href=http://bbs.colg.cn/home.php?mod=space&uid=517522 title="跳转该用户页面">kfu</a> 、
                     <a href=http://bbs.colg.cn/home.php?mod=space&uid=499326 title="跳转该用户页面">duanchao1993</a> 、
                     <a href=http://bbs.colg.cn/home.php?mod=space&uid=917192 title="跳转该用户页面">天空の城市</a> 、
                     <a href=http://bbs.colg.cn/home.php?mod=space&uid=917192 title="跳转该用户页面">修炼爱情</a> 对于此帖完成提供的帮助。</p>
@@ -284,7 +284,8 @@
                         <dd>
                             <p>卢克地下城掉落的传说装备（可交易）</p>
                             <ul>
-                                <li>卢克地下城传说装备属于<span class="text-yellow">黄金卡牌</span>，附送<span class="text-pink">3个黑白矿</span></li>
+                                <li>卢克地下城传说装备属于<span class="text-yellow">黄金卡牌</span>，附送<span
+                                        class="text-pink">3个黑白矿</span></li>
                             </ul>
                         </dd>
                         <br>
@@ -409,7 +410,8 @@
                     <div class="ht-2"></div>
                     <dl>
                         <dt class="bg-ico">
-                            <span class="text-orange" style="background-image: url(//wx3.sinaimg.cn/mw690/005XcV4Sly1fck2ehzjbfj300s00st8h.jpg)">安徒恩的神经细胞</span>
+                            <span class="text-orange"
+                                  style="background-image: url(//wx3.sinaimg.cn/mw690/005XcV4Sly1fck2ehzjbfj300s00st8h.jpg)">安徒恩的神经细胞</span>
                         </dt>
                         <br>
                         <dd>
@@ -879,9 +881,9 @@
 </script>
 <script>
     var _hmt = _hmt || [];
-    (function() {
+    (function () {
         var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?f835fa6ef04323b580066cc84053f84c";
+        hm.src = "https://hm.baidu.com/hm.js?84390e7ecd9ffec2cd3d55d6c61e2bac";
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(hm, s);
     })();
