修复塔罗牌描述错误

--- a/index.html
+++ b/index.html
@@ -177,13 +177,11 @@
                         <br>
                         <dd>
                             <p>
-                                卢克Raid副本的基础材料，5个
-                                <span class="text-purple">暗之根源</span>
-                                可以兑换为1个<span class="text-pink">黑白矿</span>
+                                开启后，可以随机获得一件与怪物塔罗牌相关联的物品（塔罗牌图案对应怪物的传说装备或附魔卡）或大量的<span class="text-pink">光之根源</span>。
                             </p>
                             <ul>
-                                <li><span class="text-pink">暗之根源</span>属于普通卡牌</li>
-                                <li>获取数量为4/5/6个</li>
+                                <li>共有22种怪物塔罗牌，开启塔罗牌需要<span class="text-yellow">100,000</span>金币</li>
+                                <li>卢克地下城怪物塔罗牌属于黄金卡牌，附送3个<span class="text-pink">黑白矿</span></li>
                             </ul>
                         </dd>
                         <br>
