--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                         <dd>
                             <p>开启后，可以获得选定种类的85级史诗装备的史诗碎片20个</p>
                             <ul>
-                                <li>需白矿进行兑要<span class="text-pink">17个黑换</span></li>
+                                <li>需要<span class="text-pink">17个黑白矿</span>进行兑换</li>
                             </ul>
                         </dd>
                         <div class="ht-2"></div>
@@ -370,7 +370,7 @@
                         <dd>
                             <p>开启后，可以获得选定种类的90级史诗装备的史诗碎片30个</p>
                             <ul>
-                                <li>需要50个黑白矿进行兑换</li>
+                                <li>需要<span class="text-pink">50个黑白矿</span>进行兑换</li>
                             </ul>
                         </dd>
                         <div class="ht-2"></div>
