--- a/index.html
+++ b/index.html
@@ -574,27 +574,103 @@
 				</section>
 			</section>
 			<section>
-				<h2 id="item-0" class="text-yellow">武器 - 创圣的救援者</h2>
-				<figure>
-					<img src=//wx3.sinaimg.cn/mw690/005XcV4Sly1fckdu2zmkaj300s00sq2p.jpg width="28" height="28">
-					<figcaption>
-						<h5>创圣的救援者-武器</h5>
-						<p>以太刀为例</p>
-					</figcaption>
-					<img class="img-responsive"
-						 src=//img.alicdn.com/imgextra/i4/668252679/TB2VyfCeHJmpuFjSZFwXXaE4VXa_!!668252679.png
-						 width="385" height="544" alt="创圣的救援者-武器">
-				</figure>
+				<dl class="clearfix">
+					<div class="page-header">
+						<h2 id="item-0" class="text-yellow">武器 - 创圣的救援者</h2>
+					</div>
 
-				<figure>
-					<img src=//wx3.sinaimg.cn/mw690/005XcV4Sly1fckdu3anulj300s00st8h.jpg width="28" height="28">
-					<figcaption>
-						<h5 class="text-yellow">创圣的救援者-十字架</h5>
-					</figcaption>
-					<img class=" img-responsive"
-						 src=//img.alicdn.com/imgextra/i3/668252679/TB2qvjOeJ0opuFjSZFxXXaDNVXa_!!668252679.png
-						 width="542" height="544" alt="创圣的救援者-武器">
-				</figure>
+					<dt class="col-md-12">
+						创圣的救援者-武器
+					</dt>
+					<dd class="col-md-6 border-right">
+						<div>
+							<img src="//wx4.sinaimg.cn/mw690/005XcV4Sly1fckewj9768j305b0f4jvt.jpg" alt="创圣的救援者-武器">
+						</div>
+						<div>
+							<img src="//wx3.sinaimg.cn/mw690/005XcV4Sly1fckewjqm6uj305a0610u5.jpg" alt="创圣的救援者-武器">
+						</div>
+					</dd>
+					<dd class="col-md-6">
+						<ul class="list-unstyled">
+							<li>物理攻击力+1058</li>
+							<li>魔法攻击力+1169</li>
+							<li>独立攻击力+686</li>
+							<li>力量+75</li>
+							<li>智力+112</li>
+
+							<li class="wrap">快速 攻击速度</li>
+							<li>武器物理技能 MP-5% 冷却时间-5%</li>
+							<li>武器魔法技能 MP+5%</li>
+
+							<li class="wrap">抗魔值+826</li>
+
+							<li class="wrap">施放速度+4%</li>
+							<li>物理暴击率+2%</li>
+							<li>命中率-1%</li>
+
+							<li class="wrap">赋予自身属性强化值最高的属性攻击</li>
+
+							<li class="wrap">技能攻击力+40%</li>
+							<li>[装备属性指令]输入时，可释放“第七使徒：火焰吞噬者安徒恩”的魔能，时长持续20秒；</li>
+							<li>魔能释放期间内，技能攻击力+22%，但无色小晶块消耗量变为原来的2倍</li>
+							<li>（冷却时间20秒，解除装备后效果消失）</li>
+
+							<li class="wrap">释放结束时，最后还能对敌人造成魔能爆炸伤害</li>
+							<li>（伤害最高可达300万）</li>
+						</ul>
+					</dd>
+					<dt class="col-md-12">
+						创圣的救援者-十字架
+					</dt>
+					<dd class="col-md-6 border-right">
+						<div><img src="//wx3.sinaimg.cn/mw690/005XcV4Sly1fckewkb4nej305a0f4tdb.jpg" alt="创圣的救援者-十字架"></div>
+						<div><img src="//wx2.sinaimg.cn/mw690/005XcV4Sly1fckewkrmu4j305b0ef42t.jpg" alt="创圣的救援者-十字架"></div>
+					</dd>
+					<dd class="col-md-6">
+						<ul class="list-unstyled">
+							<li>物理攻击力+1113</li>
+							<li>魔法攻击力+1058</li>
+							<li>独立攻击力+686</li>
+							<li>物理防御力+1056</li>
+							<li>魔法防御力+1056</li>
+							<li>智力+75</li>
+							<li>体力+89</li>
+							<li>精神+89</li>
+
+							<li class="wrap">普通 攻击速度</li>
+							<li>武器物理技能 MP-5% 冷却时间-5%</li>
+
+							<li class="wrap">抗魔值+826</li>
+
+							<li class="wrap">施放速度+2%</li>
+							<li>圣职者（男）：[荣誉祝福]技能Lv +2</li>
+							<li>圣职者（女）：[勇武祝福]技能Lv +5</li>
+
+							<li class="wrap">[武器祝福]物理攻击力增加量+25，力量增加量+10</li>
+							<li>[天使祝福]魔法攻击力增加量+13，智力增加量+25</li>
+							<li>[荣誉祝福]力量增加量+25，智力增加量+25</li>
+							<li>[天堂谐音]HP上限增加量+10%</li>
+							<li>[圣光十字]Buff范围+30%</li>
+							<li>[天启之珠]删除攻击力和攻击持续时间，Buff持续时间+6秒</li>
+
+							<li class="wrap">[胜利十字]Buff效果持续时间+6秒，攻击力+15%</li>
+							<li>[启示：传道者]技能攻击力增加率追加增加30%</li>
+							<li>[勇武之咏叹调]效果范围+20%</li>
+							<li>[再生之咏叹调]效果范围+20%</li>
+
+							<li class="wrap">[勇武祝福]物理攻击力增加量+18，魔法攻击力增加量+7，智力增加量+6</li>
+							<li>[守护祝福]HP上限增加量+10%</li>
+
+							<li class="wrap">[装备属性指令]输入时，可释放“第七使徒：火焰吞噬者安徒恩”的魔能，时长持续20秒；</li>
+							<li>魔能释放期间内，获得以下效果：</li>
+							<li>（冷却时间20秒，解除装备后效果消失）</li>
+							<li>- 施放速度+100%</li>
+							<li>- 技能冷却时间-15%</li>
+							<li>- [启示：传道者]技能攻击力增加率追加增加15%</li>
+						</ul>
+					</dd>
+				</dl>
+
 				<dl class="clearfix">
 					<div class="page-header">
 						<h2 id="item-1" class="text-yellow">布甲防具 - 亡魂幻觉 套装</h2>
