--- a/index.html
+++ b/index.html
@@ -1281,27 +1281,25 @@
 					<dd class="col-md-6">
 						<ul class="list-unstyled">
 							<li><b>通用属性</b></li>
-							<li>物理防御力+4664</li>
-							<li>力量+211</li>
-							<li>智力+211</li>
-							<li>体力+216</li>
-							<li>精神+176</li>
+							<li>物理防御力+5830</li>
+							<li>力量+111</li>
+							<li>智力+111</li>
+							<li>体力+114</li>
+							<li>精神+66</li>
 							<li>抗魔值+310</li>
 
 							<li class="wrap">HP MAX+440</li>
-							<li>物品栏负重上限+20kg</li>
+							<li>施放速度+22%</li>
 
-							<li class="wrap text-danger">技能攻击力+8%</li>
-
-							<li class="wrap text-danger">所有职业的Lv 35技能攻击力+15%</li>
+							<li class="wrap text-danger">施放技能时，增加15%的物理、魔法、独立攻击力，效果持续60秒</li>
+							<li>（冷却时间60秒，解除装备后效果消失）</li>
+							<li class="wrap text-danger">所有职业的Lv 40技能攻击力+12%</li>
 
 							<li class="wrap"><b>特有属性</b></li>
-							<li>[圣光十字]技能Lv +3</li>
-							<li>[勇武之咏叹调]技能Lv +3</li>
-							<li class="text-danger">[圣光十字]攻击力增加率+20%，队友攻击力增加量+20%</li>
-							<li class="text-danger">[勇武之咏叹调]攻击力+10%</li>
-							<li>[勇武之咏叹调]Buff效果增幅率+10%</li>
-							<li class="text-primary">[勇武之咏叹调]冷却时间-10%</li>
+							<li>[天使祝福]技能Lv +3</li>
+							<li>[天使祝福]智力增加量+15%，魔法攻击力增加量+15%</li>
+							<li class="text-danger">[勇武祝福]智力增加量+15%，魔法攻击力增加量+15%</li>
+							<li class="text-primary">[勇武祝福]智力增加量+10，魔法攻击力增加量+2</li>
 						</ul>
 					</dd>
 					<dt class="col-md-12">
