--- a/index.html
+++ b/index.html
@@ -1298,8 +1298,8 @@
 							<li class="wrap"><b>特有属性</b></li>
 							<li>[天使祝福]技能Lv +3</li>
 							<li>[天使祝福]智力增加量+15%，魔法攻击力增加量+15%</li>
-							<li class="text-danger">[勇武祝福]智力增加量+15%，魔法攻击力增加量+15%</li>
-							<li class="text-primary">[勇武祝福]智力增加量+10，魔法攻击力增加量+2</li>
+							<li>[勇武祝福]智力增加量+15%，魔法攻击力增加量+15%</li>
+							<li>[勇武祝福]智力增加量+10，魔法攻击力增加量+2</li>
 						</ul>
 					</dd>
 					<dt class="col-md-12">
